# rust-api

./: .env  Cargo.toml
migrations/2021-10-13-043255_create_users/: up.sql
src/: main.rs  router.rs
src/database/: config.rs
src/models/: user.rs
src/router/: users.rs
